Add Peter Singer

--- a/src/deck.mdx
+++ b/src/deck.mdx
@@ -88,6 +88,13 @@ Alexandre Morales
 
 ---
 
+# Peter Singer
+<Appear>
+  <p>Especismo</p>
+</Appear>
+
+---
+
 # Isaac Asimov 
 <Appear>
   <p>1ª Lei: Um robô não pode ferir um ser humano ou, por inação, permitir que um ser humano sofra algum mal.</p>
